--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,34 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
-    <style>
-        /* Define a CSS class for the custom link styling */
-        .custom-navbar-brand {
-            color: #422e20;
-            font-family: Helvetica, sans-serif;
-        }
-
-        .custom-navbar-brand span {
-            color: #372213;
-            font-family: Helvetica, sans-serif;
-        }
-
-        /* Adjust spacing for My Books link */
-        .nav-link.my-books {
-            color: #7a6a5d;
-            font-family: Helvetica, sans-serif;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .nav-link.my-books:hover {
-            background-color: #382110;
-            color: white;
-        }
-        
-    </style>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-     <!-- Navbar -->
      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(244,241,234);">
         <div class="container">
             <a class="navbar-brand fs-3 fw-bold custom-navbar-brand" href="/myreads">my<span>reads</span></a>
