--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
+<body class="signup-body">
+    <div class="row justify-content-center">
+        <div class="col-md-3">
+            <a class="custom-navbar-brand fs-3 fw-bold text-decoration-none" href="/myreads">my<span>reads</span></a>
+        </div>
+    
+        <div class="col-md-6 me-auto">
+            <div class="card sign-up-custom-card p-4">
+                <!-- Your sign up form or content goes here -->
+                <h2 class="text-center">Sign up for Myreads</h2>
+                <p class="text-center">Sign up to see what your friends are reading and get book recommendations.</p>
+                <button class="btn btn-block mx-auto btn-sign-up">Sign up with email</button>
+                <p class="text-center mt-3 mb-0 sign-up-small" >Already a member? <a class="text-decoration-none" href="#">Sign in</a></p>
+                <p class="text-center mb-0 sign-up-small">By creating an account, you agree to the Myreads <a class="text-decoration-none" href="#"> Terms of Service</a> and <a class="text-decoration-none" href="#">Privacy Policy</a>.</p>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
