--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,7 +12,7 @@
 <body class="signup-body">
     <div class="row justify-content-center">
         <div class="col-md-3">
-            <a class="custom-navbar-brand fs-3 fw-bold text-decoration-none" href="/myreads">my<span>reads</span></a>
+            <a class="custom-navbar-brand fs-3 text-decoration-none" href="/myreads">my<span class="fw-bold">reads</span></a>
         </div>
     
         <div class="col-md-6 me-auto">
@@ -20,7 +20,7 @@
                 <!-- Your sign up form or content goes here -->
                 <h2 class="text-center">Sign up for Myreads</h2>
                 <p class="text-center">Sign up to see what your friends are reading and get book recommendations.</p>
-                <button class="btn btn-block mx-auto btn-sign-up">Sign up with email</button>
+                <a href="/register" class="btn btn-block mx-auto btn-sign-up">Sign up with email</a>
                 <p class="text-center mt-3 mb-0 sign-up-small" >Already a member? <a class="text-decoration-none" href="#">Sign in</a></p>
                 <p class="text-center mb-0 sign-up-small">By creating an account, you agree to the Myreads <a class="text-decoration-none" href="#"> Terms of Service</a> and <a class="text-decoration-none" href="#">Privacy Policy</a>.</p>
             </div>
