--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 <body>
      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(244,241,234);">
         <div class="container">
-            <a class="navbar-brand fs-3 fw-bold custom-navbar-brand" href="/myreads">my<span>reads</span></a>
+            <a class="navbar-brand fs-3 custom-navbar-brand" href="/myreads">my<span class="fw-bold">reads</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
