--- a/views/otp-request.ejs
+++ b/views/otp-request.ejs
@@ -1,23 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Myreads Registration</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-    crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body style="background-color: #ffffff;">
+<%- include('layout') %>
+
     <nav class="navbar">
         <div class="container-fluid">
             <a class="navbar-brand mx-auto fs-1" href="/myreads">my<span class="fw-bold">reads</span></a>
         </div>
     </nav>
     <p class="create-account text-center fs-1">Verify email address</p>
-    <p class="mx-auto text-center" style="font-family: Helvetica, sans-serif; width: 440px;">To verify your email, we've sent a One Time Password (OTP) to <%= email %> <a href="/register" class="text-decoration-underline" style="color:#111111;">(Change)</a></p>
-    <div id="error-message" class="mx-auto p-2 fw-bold" style="width: 290px; background-color: #fff5f3; color: #382110; display: <% if(errors && errors.length > 0) { %>block<% } else { %>none<% } %>;">
+    <p class="mx-auto text-center otp-request-verify-email">To verify your email, we've sent a One Time Password (OTP) to <%= email %> <a href="/register" class="text-decoration-underline" style="color:#111111;">(Change)</a></p>
+    <div id="error-message" class="mx-auto fw-bold" style="width: 290px; background-color: #fff5f3; color: #382110; display: <% if(errors && errors.length > 0) { %>block<% } else { %>none<% } %>;">
         <% if(errors && errors.length > 0) { %>
             <ul>
                 <% errors.forEach(error => { %>
@@ -39,12 +29,6 @@
             </div>
 
             <button type="submit" class="register-custom-button">Create account</button>
-            <p class="mx-auto text-center mt-1" style="font-family: Helvetica, sans-serif;"><a href="/resend-otp" class="text-decoration-underline" style="color:#111111;">Resend OTP</a></p>
+            <p class="mx-auto text-center mt-1 otp-request-resent-otp"><a href="/resend-otp" class="text-decoration-underline" style="color:#111111;">Resend OTP</a></p>
         </form>
-        
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-    crossorigin="anonymous"></script>
-</body>
-</html>
