--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -21,8 +21,8 @@
                 <h2 class="text-center">Sign up for Myreads</h2>
                 <p class="text-center">Sign up to see what your friends are reading and get book recommendations.</p>
                 <a href="/register" class="btn btn-block mx-auto btn-sign-up">Sign up with email</a>
-                <p class="text-center mt-3 mb-0 sign-up-small" >Already a member? <a class="text-decoration-none" href="#">Sign in</a></p>
-                <p class="text-center mb-0 sign-up-small">By creating an account, you agree to the Myreads <a class="text-decoration-none" href="#"> Terms of Service</a> and <a class="text-decoration-none" href="#">Privacy Policy</a>.</p>
+                <p class="text-center mt-3 mb-0 sign-up-small" >Already a member? <a class="text-decoration-none" href="/signin">Sign in</a></p>
+                <p class="text-center mb-0 sign-up-small">By creating an account, you agree to the Myreads <a class="text-decoration-none" href="/terms_of_service"> Terms of Service</a> and <a class="text-decoration-none" href="/privacy_policy">Privacy Policy</a>.</p>
             </div>
         </div>
     </div>
