--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -9,8 +9,14 @@
                 <li class="nav-item">
                     <a class="nav-link my-books fw-bold" href="/signup">My Books</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Browse</a>
+                <li class="nav-item dropdown"> <!-- Added dropdown class -->
+                    <a class="nav-link dropdown-toggle my-books fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Browse
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item navbar-dropdown" href="/new_releases" style="color: #5f5f5f;">New Releases</a></li>
+                        <!-- You can add more dropdown items here -->
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Community</a>
