created the Book model; wrote logic for creating Admin user and restricting the add_book page to only admin user; wrote code for handling adding of books to the database from the add-book page;

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,8 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- For google recaptcha -->
     <script async src="https://www.google.com/recaptcha/api.js"></script>
+    <!-- Tiny MCE -->
+    <script src="https://cdn.tiny.cloud/1/hrlhmnjredy9vheah7dzwehffis2tm22oas86z54ank474k2/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <link rel="preconnect" href="https://www.google.com">
     <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
     <link rel="stylesheet" href="/css/styles.css">
@@ -20,6 +22,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous"></script>
+
+    <script>
+        // Initialize TinyMCE
+        tinymce.init({
+            selector: '#description',
+            plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage advtemplate ai mentions tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss markdown',
+            toolbar: 'undo redo | formatselect | bold italic underline strikethrough | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | forecolor backcolor removeformat | image media | link unlink | table | emoticons charmap | codesample',
+        tinycomments_mode: 'embedded',
+        tinycomments_author: 'Author name',
+        mergetags_list: [
+            { value: 'First.Name', title: 'First Name' },
+            { value: 'Email', title: 'Email' },
+        ],
+        ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant"))
+    });
+    </script>
 
     <script src="/javascript/jwt.js"></script>
 </body>
