--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -272,3 +272,55 @@ width: 100%;
     background-color: #1e192b; 
     color: #ffffff; 
 }
+
+.rating-bar {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.rating-bar .progress {
+    flex-grow: 1;
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 8px;
+    background-color: #e9ecef;
+}
+.rating-bar .progress-bar {
+    background-color: #e87400;
+}
+.rating-bar .rating-text {
+    min-width: 40px;
+}
+
+.search-filter-container {
+    display: flex;
+    align-items: center;
+}
+.search-input {
+    border-radius: 50px;
+    border: 2px solid #8c817a;
+    padding-left: 15px;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+}
+.search-input input {
+    border: none;
+    outline: none;
+    flex-grow: 1;
+    border-radius: 50px;
+    padding-left: 10px;
+    height: 30px; 
+}
+.filter-button {
+    border-radius: 50px;
+    border: 1px solid #8c817a;
+    background-color: white;
+    padding: 0.375rem 0.75rem;
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+}
+.filter-button i {
+    margin-right: 5px;
+}
