--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -43,10 +43,27 @@
             </div>
             <div class="d-flex align-items-center ">
                 <div>
-                    <% for (let i = 0; i < 5; i++) { %>
-                        <i class="bi bi-star-fill fs-2"></i>
+                    <% for (let i = 1; i <= 5; i++) { %>
+                        <% if (book.rating >= i) { %>
+                            <!-- Full star -->
+                            <i class="fas fa-star star"></i>
+                        <% } else if (book.rating > (i - 1) && book.rating < i) { %>
+                            <!-- Partial star -->
+                            <div class="half-star">
+                                <i class="far fa-star empty-star"></i>
+                                <div class="half-fill" style="width: <%= ((book.rating - (i - 1)) * 100) %>%;">
+                                    <i class="fas fa-star star"></i>
+                                </div>
+                            </div>
+                        <% } else { %>
+                            <!-- Empty star -->
+                            <i class="far fa-star empty-star"></i>
+                        <% } %>
                     <% } %>
                 </div>
+                
+                
+                
                 <div class="d-flex align-items-center justify-content-center">
                     <div class="ms-3" style="font-family: Georgia, serif; font-weight: 600; font-size: 26px; line-height: 37px; color: #1e1915;">
                         <%= book.rating %>
