--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,6 +13,8 @@
     <script async src="https://www.google.com/recaptcha/api.js"></script>
     <!-- Tiny MCE -->
     <script src="https://cdn.tiny.cloud/1/hrlhmnjredy9vheah7dzwehffis2tm22oas86z54ank474k2/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://www.google.com">
     <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
     <link rel="stylesheet" href="/css/styles.css">
