added the same show more book description feature in the detail page; moved the javascript to its own file since the script is now being used on two pages

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -42,5 +42,6 @@
     </script>
 
     <script src="/javascript/jwt.js"></script>
+    <script src="/javascript/showMoreBookDescription.js"></script>
 </body>
 </html>
