--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -76,7 +76,7 @@
                     </div>
                 </div>  
             </div>
-            <div class="description-container" id="description-container-<%= book._id %>">
+            <div class="description-container" id="description-container-<%= book._id %>" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 16px; line-height: 22px; color: #1e1915;">
                 <p class="mb-2 short-description">
                     <%- book.description %>
                 </p>
