added a genre field to the Book model; made it so that book details can be edited via the admin panel

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -354,3 +354,7 @@ width: 100%;
     overflow: hidden;
     white-space: nowrap;
 }
+
+.genre-link:hover {
+    text-decoration-color: #7FD7CC !important; 
+}
