--- a/views/add_book.ejs
+++ b/views/add_book.ejs
@@ -1,12 +1,18 @@
 <%- include('layout') %>
 
 <title><%= title %></title>
-    <nav class="navbar">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand mx-auto fs-1" href="/myreads">my<span class="fw-bold">reads</span></a>
+            <a class="navbar-brand fs-1" href="/myreads">my<span class="fw-bold">reads</span></a>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/edit_book">Edit Book</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </nav>
-    
+    </nav>    
     <div id="register-error-message" class="mx-auto p-2 fw-bold" style="display: <% if(errors && errors.length > 0) { %>block<% } else { %>none<% } %>;">
         <% if(errors && errors.length > 0) { %>
             <ul>
@@ -39,6 +45,23 @@
             <div class="form-group">
                 <label for="description">Description:</label>
                 <textarea id="description" name="description" class="form-control" rows="4"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="genre">Genre:</label>
+                <select id="genre" name="genre" class="form-control" multiple required>
+                    <option value="Art">Art</option>
+                    <option value="Classics">Classics</option>
+                    <option value="Contemporary">Contemporary</option>
+                    <option value="Crime">Crime</option>
+                    <option value="Fiction">Fiction</option>
+                    <option value="Historical Fiction">Historical Fiction</option>
+                    <option value="History">History</option>
+                    <option value="Humor and Comedy">Humor and Comedy</option>
+                    <option value="Nonfiction">Nonfiction</option>
+                    <option value="Religion">Religion</option>
+                    <option value="Science">Science</option>
+                    <option value="Thriller">Thriller</option>
+                </select>
             </div>
             <button id="submitButton" type="submit" class="btn btn-primary">Add Book</button>
         </form>
