--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-3 mt-2 d-flex flex-column ">
             <div class="ms-3">
-                <img src="<%= book.image %>" alt="<%= book.title %>" class="image">
+                <img src="<%= book.image %>" alt="<%= book.title %>" class="image" style="width: 65%;">
             </div>
             <div class="row">
                 <div class="col-5 col-md-12 col-lg-9 ">
@@ -86,11 +86,15 @@
                     </a>
                 </div>
             </div>
-            <div class="d-flex align-items-center">
-                <div style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #707070;">Genres</div>
-                <div class="ms-2" style="font-family: Arial, sans-serif; font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915; text-decoration: underline; text-decoration-color: #409970; text-decoration-thickness: 2px;">Romance</div>
-                <div class="ms-2" style="font-family: Arial, sans-serif; font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915; text-decoration: underline; text-decoration-color: #409970; text-decoration-thickness: 2px;">Fiction</div>
-                <div class="ms-2" style="font-family: Arial, sans-serif; font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915; text-decoration: underline; text-decoration-color: #409970; text-decoration-thickness: 2px;">Contemporary</div>
+            <div class="d-flex align-items-center mt-3">
+                <div style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #707070;">Genres:</div>
+                <% book.genre.forEach(function(genre) { %>
+                    <div class="ms-2" style="font-family: Arial, sans-serif; font-weight: 600; font-size: 14px; line-height: 20px;">
+                        <a class="genre-link" href="/books/genre/<%= genre %>" style="color: #1e1915; text-decoration: underline; text-decoration-color: #409970; text-decoration-thickness: 2px;">
+                            <%= genre %>
+                        </a>
+                    </div>
+                <% }); %>
             </div>
             <div class="mt-2" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #707070;">320 pages, paperback</div>
             <div class="show-more-button">
