--- a/views/new_releases.ejs
+++ b/views/new_releases.ejs
@@ -12,7 +12,7 @@
                 <% books.forEach((book, index) => { %>
                 <div class="col-md-3">
                     <a href="/book/<%= book._id %>/details" class="image-link">
-                        <img src="<%= book.image %>" alt="<%= book.title %>" class="image">
+                        <img src="<%= book.image %>" alt="<%= book.title %>" class="image" style="width: 65%;">
                     </a>    
                 </div>       
                 <div class="col-md-8 new-releases mb-5">
