--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -90,7 +90,7 @@
                 <div style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #707070;">Genres:</div>
                 <% book.genre.forEach(function(genre) { %>
                     <div class="ms-2" style="font-family: Arial, sans-serif; font-weight: 600; font-size: 14px; line-height: 20px;">
-                        <a class="genre-link" href="/books/genre/<%= genre %>" style="color: #1e1915; text-decoration: underline; text-decoration-color: #409970; text-decoration-thickness: 2px;">
+                        <a class="genre-link" href="/genre/<%= genre %>" style="color: #1e1915; text-decoration: underline; text-decoration-color: #409970; text-decoration-thickness: 2px;">
                             <%= genre %>
                         </a>
                     </div>
