--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -43,5 +43,6 @@
 
     <script src="/javascript/jwt.js"></script>
     <script src="/javascript/showMoreBookDescription.js"></script>
+    <script src="/javascript/adminForm.js"></script>
 </body>
 </html>
