--- a/views/category.ejs
+++ b/views/category.ejs
@@ -3,7 +3,7 @@
 <title><%= title %></title>
 <%- include('navbar') %>
 
-<div class="container " style="width: 70%;">
+<div class="container" style="width: 70%;">
     <div class="row">
         <div class="col-md-8">
             <div class="mt-2" style="font-family: Georgia, 'Times New Roman', serif; font-weight: 700; font-size: 24px; line-height: 24px; color: #382110;">
@@ -18,39 +18,14 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-md-2">
-                    <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1706564543l/195430687._SY475_.jpg" style="height: 200px; width: 100%;">
-                </div>
-                <div class="col-md-2">
-                    <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1706564543l/195430687._SY475_.jpg" style="height: 200px; width: 100%;">
-                </div>
-                <div class="col-md-2">
-                    <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1706564543l/195430687._SY475_.jpg" style="height: 200px; width: 100%;">
-                </div>
-                <div class="col-md-2">
-                    <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1706564543l/195430687._SY475_.jpg" style="height: 200px; width: 100%;">
-                </div>
-                <div class="col-md-2">
-                    <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1706564543l/195430687._SY475_.jpg" style="height: 200px; width: 100%;">
-                </div>
+                <% books.forEach(book => { %>
+                    <div class="col-6 col-sm-4 col-md-3 col-lg-2 mb-4">
+                        <a href="/book/<%= book._id %>/details">
+                            <img src="<%= book.image %>" class="img-fluid rounded" alt="<%= book.title %>">
+                        </a>
+                    </div>
+                <% }); %>
             </div>
-            <div class="row">
-                <div class="col-md-2">
-                    <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1706564543l/195430687._SY475_.jpg" style="height: 200px; width: 100%;">
-                </div>
-                <div class="col-md-2">
-                    <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1706564543l/195430687._SY475_.jpg" style="height: 200px; width: 100%;">
-                </div>
-                <div class="col-md-2">
-                    <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1706564543l/195430687._SY475_.jpg" style="height: 200px; width: 100%;">
-                </div>
-                <div class="col-md-2">
-                    <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1706564543l/195430687._SY475_.jpg" style="height: 200px; width: 100%;">
-                </div>
-                <div class="col-md-2">
-                    <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1706564543l/195430687._SY475_.jpg" style="height: 200px; width: 100%;">
-                </div>
-            </div>            
         </div>
         <div class="col-md-4 mt-5">
             <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 24px; color: #382110;">
