--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -96,7 +96,7 @@
                     </div>
                 <% }); %>
             </div>
-            <div class="mt-2" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #707070;">320 pages, paperback</div>
+            <div class="mt-2" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #707070;"><%= book.pages %> pages, <%= book.mediaType %></div>
             <div class="show-more-button">
                 <a style="font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915;" class="text-decoration-none show-more-link" data-book-id="<%= book._id %>" href="#">
                     Book Details & Editions &#9662;
