--- a/views/edit_book_form.ejs
+++ b/views/edit_book_form.ejs
@@ -49,6 +49,19 @@
                 <option value="Thriller" <%= book.genre.includes('Thriller') ? 'selected' : '' %>>Thriller</option>
             </select>
         </div>
+        <div class="form-group">
+            <label for="pages">Pages:</label>
+            <input type="number" id="pages" name="pages" class="form-control" value="<%= book.pages %>" required>
+        </div>
+        <div class="form-group">
+            <label for="mediaType">Media Type:</label>
+            <select id="mediaType" name="mediaType" class="form-control" required>
+                <option value="Hardcover" <%= book.mediaType === 'Hardcover' ? 'selected' : '' %>>Hardcover</option>
+                <option value="Paperback" <%= book.mediaType === 'Paperback' ? 'selected' : '' %>>Paperback</option>
+                <option value="eBook" <%= book.mediaType === 'eBook' ? 'selected' : '' %>>eBook</option>
+                <option value="Audiobook" <%= book.mediaType === 'Audiobook' ? 'selected' : '' %>>Audiobook</option>
+            </select>
+        </div>
         <button type="submit" class="btn btn-primary">Update Book</button>
     </form>
 </div>
