--- a/views/add_book.ejs
+++ b/views/add_book.ejs
@@ -82,6 +82,10 @@
                     <option value="Audiobook">Audiobook</option>
                 </select>
             </div>
+            <div class="form-group">
+                <label for="publishedDate">Published Date:</label>
+                <input type="date" id="publishedDate" name="publishedDate" class="form-control" required>
+            </div>
             <button id="submitButton" type="submit" class="btn btn-primary">Add Book</button>
         </form>
     </div>
