--- a/views/edit_book_form.ejs
+++ b/views/edit_book_form.ejs
@@ -62,6 +62,10 @@
                 <option value="Audiobook" <%= book.mediaType === 'Audiobook' ? 'selected' : '' %>>Audiobook</option>
             </select>
         </div>
+        <div class="form-group">
+            <label for="publishedDate">Published Date:</label>
+            <input type="date" id="publishedDate" name="publishedDate" class="form-control" value="<%= book.publishedDate ? new Date(book.publishedDate).toISOString().substring(0, 10) : '' %>" required>
+        </div>
         <button type="submit" class="btn btn-primary">Update Book</button>
     </form>
 </div>
