--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -359,3 +359,7 @@ width: 100%;
     text-decoration-color: #7FD7CC !important; 
 }
 
+.message-btn:hover{
+    background-color: #2b1a0b !important;
+}
+
