--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -5,20 +5,19 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-3 mt-2 d-flex flex-column ">
+        <div class="col-md-3 col-10 mt-2 d-flex flex-column ">
             <div class="ms-3">
                 <img src="<%= book.image %>" alt="<%= book.title %>" class="image" style="width: 65%;">
             </div>
             <div class="row">
-                <div class="col-5 col-md-12 col-lg-9 ">
+                <div class="col-9 col-md-12 col-lg-9 ">
                     <a href="/signup" class="btn fw-bold mt-2 mb-1 btn-want-to-read" style="background-color: #3f8363; color: #ffffff; border-radius: 15%; width: 100%; display: inline-block; text-align: center; padding: 0.375rem 0.75rem; text-decoration: none;">
                         Want to read
                     </a>
-                    
                 </div>
             </div>
             <div class="row">
-                <div class="col-5 col-md-12 col-lg-9 text-center">
+                <div class="col-9 col-md-12 col-lg-9 text-center">
                     <div id="stars">
                         <% for (let i = 0; i < 5; i++) { %>
                             <a href="/signup" class="text-decoration-none" style="color: #1e1915;" data-index="<%= i %>">
@@ -114,19 +113,32 @@
                 
             </div>
             <div class="d-flex row align-items-center justify-content-center">
-                    <button class="btn mb-2" style="background-color: #1e1915; color: #ffffff; border-radius: 20%; width: 50%;">
-                        Write a Review
-                    </button>
+                <a href="/signup" class="btn mb-2" style="background-color: #1e1915; color: #ffffff; border-radius: 20%; width: 50%;">
+                    Write a Review
+                </a>
                 <hr>
             </div>
             <div style="font-family: Georgia, serif; font-weight: 600; font-size: 20px; line-height: 28px; color: #1e1915;">
                 Community Reviews
             </div>
             <div class="d-flex">
-                <div class="">
-                    
-                    <% for (let i = 0; i < 5; i++) { %>
-                        <i class="bi bi-star fs-2"></i>
+                <div>
+                    <% for (let i = 1; i <= 5; i++) { %>
+                        <% if (book.rating >= i) { %>
+                            <!-- Full star -->
+                            <i class="fas fa-star star"></i>
+                        <% } else if (book.rating > (i - 1) && book.rating < i) { %>
+                            <!-- Partial star -->
+                            <div class="half-star">
+                                <i class="far fa-star empty-star"></i>
+                                <div class="half-fill" style="width: <%= ((book.rating - (i - 1)) * 100) %>%;">
+                                    <i class="fas fa-star star"></i>
+                                </div>
+                            </div>
+                        <% } else { %>
+                            <!-- Empty star -->
+                            <i class="far fa-star empty-star"></i>
+                        <% } %>
                     <% } %>
                 </div>
                 <div class="d-flex align-items-center justify-content-center">
@@ -141,7 +153,7 @@
                     </div>
                 </div>     
             </div>
-            <div class="rating-bar">
+            <div class="rating-bar mt-3">
                 <span class="rating-text">5 stars</span>
                 <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"></div>
