--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -7,8 +7,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link my-books fw-bold" href="/signup">My Books</a>
-                </li>
+                    <a class="nav-link my-books fw-bold" href="<%= loggedIn ? '/mybooks' : '/signup' %>">My Books</a>
+                </li>                
                 <li class="nav-item dropdown"> <!-- Added dropdown class -->
                     <a class="nav-link dropdown-toggle my-books fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Browse
