--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -113,7 +113,7 @@
                 
             </div>
             <div class="d-flex row align-items-center justify-content-center">
-                <a href="/signup" class="btn mb-2" style="background-color: #1e1915; color: #ffffff; border-radius: 20%; width: 50%;">
+                    <a href="<%= loggedIn ? '/write_review' : '/signup' %>"  class="btn mb-2" style="background-color: #1e1915; color: #ffffff; border-radius: 20%; width: 50%;">
                     Write a Review
                 </a>
                 <hr>
